<resources>
    <string name="app_name">Fuel Bills</string>
    <string name="car_name">Name</string>
    <string name="vin">VIN</string>
    <string name="fuel">Fuel</string>
    <string name="plate">Plate</string>
    <string name="save">Save</string>
    <string name="gasoline">Gasoline</string>
    <string name="diesel">Diesel</string>
    <string name="lpg">Lpg</string>
    <string name="add_car">add car</string>
    <string name="date">Date</string>
    <string name="trip_distance">Trip distance</string>
    <string name="km">km</string>
    <string name="distance">Distance</string>
    <string name="quantity">Quantity</string>
    <string name="litres">L</string>
    <string name="price">Price</string>
    <string name="total_price">Total price</string>
    <string name="note">Note</string>
    <string name="refueling_list">Refueling List</string>
    <string name="add_refueling">Add Refueling</string>
    <string name="edit_refueling">Edit Refueling</string>
    <string name="avg">avg</string>
    <string name="l_100km">L/100km</string>
    <string name="show_chart">show chart</string>
    <string name="click_to_edit">click date to edit</string>
    <string name="last_avg">last avg</string>
    <string name="car_button">car button</string>
    <string name="insert_button">insert button</string>
    <string name="refueling_button">refueling button</string>
    <string name="settings">settings</string>
    <string name="currency">currency</string>
    <string name="car_list">Car List</string>
    <string name="key_list_fuel_unit">list_fuel_efficiency</string>
    <string name="fuel_efficiency">fuel efficiency</string>
    <string name="pln">PLN</string>
    <string name="mpg">MPG</string>
    <string name="mil">mil</string>
    <string name="galoon">gal</string>
    <string name="key_list_currency">list_currency</string>
    <string name="date_picker">datePicker</string>
    <string name="your_avg">Your AVG is:</string>
    <string name="edit_car">Edit Car</string>
    <string name="add_car_button">add car button</string>
    <string name="add_refuling_button">add refuling button</string>
    <string name="save_button">save button</string>
    <string name="open_settings_button">open settings button</string>
    <string name="show_chart_button">show chart button</string>
</resources>
