<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/name_label_tv"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/car_name"
            style="@style/CardItemTextViewStyle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/name_tv"
            android:layout_marginStart="16dp"
            style="@style/CardItemTextViewStyle"
            app:layout_constraintBaseline_toBaselineOf="@+id/name_label_tv"
            app:layout_constraintStart_toEndOf="@+id/name_label_tv"
            tools:text="Ford Focus RS" />

        <TextView
            android:id="@+id/vin_label_tv"
            android:layout_marginTop="8dp"
            android:text="@string/vin"
            style="@style/CardItemTextViewStyle"
            app:layout_constraintStart_toStartOf="@+id/name_label_tv"
            app:layout_constraintTop_toBottomOf="@+id/name_label_tv" />

        <TextView
            android:id="@+id/vin_tv"
            style="@style/CardItemTextViewStyle"
            app:layout_constraintBaseline_toBaselineOf="@+id/vin_label_tv"
            app:layout_constraintStart_toStartOf="@+id/name_tv"
            tools:text="WF0DP3TH4G4113966" />

        <TextView
            android:id="@+id/fuel_label_tv"
            android:layout_marginTop="8dp"
            android:text="@string/fuel"
            style="@style/CardItemTextViewStyle"
            app:layout_constraintStart_toStartOf="@+id/vin_label_tv"
            app:layout_constraintTop_toBottomOf="@+id/vin_label_tv" />

        <TextView
            android:id="@+id/fuel_tv"
            style="@style/CardItemTextViewStyle"
            app:layout_constraintBaseline_toBaselineOf="@+id/fuel_label_tv"
            app:layout_constraintStart_toStartOf="@+id/vin_tv"
            tools:text="Gasoline" />

        <TextView
            android:id="@+id/plate_label_tv"
            style="@style/CardItemTextViewStyle"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/plate"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/fuel_label_tv"
            app:layout_constraintTop_toBottomOf="@+id/fuel_label_tv" />

        <TextView
            android:id="@+id/plate_tv"
            style="@style/CardItemTextViewStyle"
            app:layout_constraintBaseline_toBaselineOf="@+id/plate_label_tv"
            app:layout_constraintStart_toStartOf="@+id/fuel_tv"
            tools:text="UDACITY" />

        <ImageButton
            android:id="@+id/del_car_btn"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:background="@android:drawable/ic_menu_delete"
            android:contentDescription="@string/car_button"
            style="@style/CardItemTextViewStyle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/insert_item_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:background="@android:drawable/ic_menu_edit"
            android:contentDescription="@string/insert_button"
            app:layout_constraintEnd_toStartOf="@+id/del_car_btn"
            app:layout_constraintTop_toTopOf="@+id/del_car_btn" />

    </android.support.constraint.ConstraintLayout>


</android.support.v7.widget.CardView>