<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddCarActivity">

    <TextView
        android:id="@+id/name_label_tv"
        android:layout_marginStart="16dp"
        android:text="@string/car_name"
        style="@style/AddTextViewStyle"
        app:layout_constraintBaseline_toBaselineOf="@+id/name_et"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/name_et"
        style="@style/AddEditTextStyle"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:hint="@string/car_name"
        android:inputType="text"
        android:minWidth="200dp"
        app:layout_constraintStart_toEndOf="@+id/name_label_tv"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Ford Focus RS" />

    <TextView
        android:id="@+id/vin_label_tv"
        android:text="@string/vin"
        style="@style/AddTextViewStyle"
        app:layout_constraintBaseline_toBaselineOf="@+id/vin_et"
        app:layout_constraintStart_toStartOf="@+id/name_label_tv" />

    <EditText
        android:id="@+id/vin_et"
        style="@style/AddEditTextStyle"
        android:layout_marginTop="8dp"
        android:hint="@string/vin"
        android:inputType="text"
        android:minWidth="200dp"
        app:layout_constraintStart_toStartOf="@+id/name_et"
        app:layout_constraintTop_toBottomOf="@+id/name_et"
        tools:text="WF0DP3TH4G4113966" />

    <TextView
        android:id="@+id/fuel_label_tv"
        android:text="@string/fuel"
        style="@style/AddEditTextStyle"
        app:layout_constraintBottom_toBottomOf="@+id/fuel_spinner"
        app:layout_constraintStart_toStartOf="@+id/vin_label_tv" />

    <Spinner
        android:id="@+id/fuel_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:entries="@array/fuels_array"
        app:layout_constraintStart_toStartOf="@+id/vin_et"
        app:layout_constraintTop_toBottomOf="@+id/vin_et"
        tools:text="Gasoline" />

    <TextView
        android:id="@+id/plate_label_tv"
        android:text="@string/plate"
        style="@style/AddTextViewStyle"
        app:layout_constraintBaseline_toBaselineOf="@+id/plate_et"
        app:layout_constraintStart_toStartOf="@+id/fuel_label_tv" />

    <EditText
        android:id="@+id/plate_et"
        style="@style/AddEditTextStyle"
        android:layout_marginTop="8dp"
        android:hint="@string/plate"
        android:inputType="text"
        android:minWidth="200dp"
        app:layout_constraintStart_toStartOf="@+id/fuel_spinner"
        app:layout_constraintTop_toBottomOf="@+id/fuel_spinner"
        tools:text="UDACITY" />


</android.support.constraint.ConstraintLayout>